--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,13 +2,19 @@
   "name": "api",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:studio": "npx prisma studio",
+    "prisma:reset": "npx prisma migrate reset --force"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
+    "@prisma/client": "^6.5.0",
     "hono": "^4.7.5"
   },
   "devDependencies": {
+    "prisma": "^6.5.0",
     "tsx": "^4.7.1"
   }
 }
