--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.0",
+    "@hono/zod-validator": "^0.4.3",
     "@prisma/client": "^6.5.0",
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "prisma": "^6.5.0",
