--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "npm" # pnpm でも npm を指定
     directory: "/" # ルートの package.json
     schedule:
-      interval: "daily" # "weekly"
+      interval: "weekly"
     # versioning-strategy: increase
     # commit-message:
     #   prefix: "deps"
@@ -11,9 +11,9 @@ updates:
   - package-ecosystem: "npm"
     directory: "/apps/web" # web の package.json
     schedule:
-      interval: "daily" # "weekly"
+      interval: "weekly"
 
   - package-ecosystem: "npm"
     directory: "/apps/api" # api の package.json
     schedule:
-      interval: "daily" # "weekly"
+      interval: "weekly"
