--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,40 +1,26 @@
-version: 2
-updates:
-  - package-ecosystem: "npm" # pnpm でも npm を指定
-    directory: "/" # ルートの package.json
-    schedule:
-      interval: "weekly"
-      day: "monday" # 月曜日に更新
-    groups:
-      all-dependencies:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 10
-    commit-message:
-      prefix: "deps(root)"
-
-  - package-ecosystem: "npm"
-    directory: "/apps/web" # web の package.json
-    schedule:
-      interval: "weekly"
-      day: "wednesday" # 水曜日に更新
-    groups:
-      web-dependencies:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 10
-    commit-message:
-      prefix: "deps(web)"
-
-  - package-ecosystem: "npm"
-    directory: "/apps/api" # api の package.json
-    schedule:
-      interval: "weekly"
-      day: "friday" # 金曜日に更新
-    groups:
-      api-dependencies:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 10
-    commit-message:
-      prefix: "deps(api)"
+# dependabotの設定を無効化（コメントアウト）
+# version: 2
+# updates:
+#   - package-ecosystem: "npm"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#     open-pull-requests-limit: 0
+#     ignore:
+#       - dependency-name: "*"
+#
+#   - package-ecosystem: "npm"
+#     directory: "/apps/web"
+#     schedule:
+#       interval: "weekly"
+#     open-pull-requests-limit: 0
+#     ignore:
+#       - dependency-name: "*"
+#
+#   - package-ecosystem: "npm"
+#     directory: "/apps/api"
+#     schedule:
+#       interval: "weekly"
+#     open-pull-requests-limit: 0
+#     ignore:
+#       - dependency-name: "*"
